# felipepiovezan.github.io

./: .gitignore  09bb1b4f.524107aa.js  09bb1b4f.54d53e0b.js  09bb1b4f.6bbc9a7d.js  09bb1b4f.70b25dd3.js  09bb1b4f.f63f812b.js  1.43c5d01a.js  1.96a4719c.js  13.37a54834.js  13.c5726d0f.js  17896441.2afc73b6.js  17896441.2d502b17.js  2.05231522.js  2.cf4e590e.js  23ef7a7b.01d5b014.js  23ef7a7b.5ef86c81.js  23ef7a7b.80159b7f.js  23ef7a7b.969b3639.js  23ef7a7b.fffe7bee.js  404.html  7327e912.34065dcc.js  7327e912.4d06c87a.js  7327e912.74ccf141.js  7327e912.cd5a33b7.js  7327e912.d83583b6.js  8dded891.700a24dc.js  8dded891.90cc1ce2.js  8dded891.978b420d.js  8dded891.ac966a75.js  8dded891.fe050744.js  935f2afb.584f3aef.js  935f2afb.6403352c.js  935f2afb.92e751ec.js  935f2afb.b186527e.js  935f2afb.bf4f6d74.js  935f2afb.da1c6280.js  935f2afb.ea3778ed.js  CNAME  README.md  animator_example.html  (+34 more)
build_system_basics/: index.html
build_system_p2/: index.html
const_constinit_constexpr_consteval/: index.html
docs/: CNAME  README.md  index.html
git_basics/: index.html
improve_spam/: index.html
research/dyn_linking_investigation/: CMakeLists.txt
research/dyn_linking_investigation/executable/: CMakeLists.txt  main.cpp
research/dyn_linking_investigation/lib_global_ctor/: CMakeLists.txt  global_ctor.cpp  global_ctor.h
research/dyn_linking_investigation/shared_lib1/: CMakeLists.txt  shared_lib1_header.h  shared_lib1_src.cpp
research/dyn_linking_investigation/shared_lib2/: CMakeLists.txt  shared_lib2_header.h  shared_lib2_src.cpp
src/: deploy.sh  docusaurus.config.js  (+3 more)
(+157 files in other folders)
